# musejump

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/analyser/: pyproject.toml
apps/analyser/app/: __init__.py  main.py
apps/analyser/data/musejump_cache/: -oOocsfe0Z0.json  2NK-wXeJUqQ.json  3Tnht8wREZI.json  E4IPwBbdm7M.json  F3crJmEPs1I.json  NhyGGLic1QM.json  W6sVXK9o0Ys.json  dUT8amMUpZY.json  uzbnrfd9vLQ.json
apps/web/: biome.json  drizzle.config.ts  next.config.js  package.json  tsconfig.json
apps/web/drizzle/: 0000_gigantic_fantastic_four.sql  0001_peaceful_ultimates.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/web/src/: env.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/app/: loading.tsx  page.tsx
apps/web/src/app/track/[trackId]/: loading.tsx  page.tsx
apps/web/src/components/: AppContent.tsx  RecentlyPlayedSection.tsx  SearchBar.tsx  SearchSection.tsx  TopTracksSection.tsx  TrackDetails.tsx  TrackItem.tsx  TrackList.tsx  TrackModal.tsx  TrackTable.tsx  UserHeader.tsx  song-structure-visualizer.tsx  track-analysis.tsx
apps/web/src/components/ui/: skeleton.tsx  table-skeleton.tsx
apps/web/src/db/: db.ts  schema.ts
apps/web/src/lib/: analyse-track.ts  spotify-actions.ts  spotify.ts  utils.ts
apps/web/src/trpc/: client.tsx  init.ts  server.tsx
apps/web/src/trpc/routers/: _app.ts  jumps.ts
apps/worker/: Makefile  README.md  go.mod  go.sum
apps/worker/cmd/server/: main.go
apps/worker/internal/config/: config.go
apps/worker/internal/worker/: worker.go
